# substruct

./: Cargo.toml
substruct/: Cargo.toml
substruct-derive/: Cargo.toml
substruct-derive/src/: lib.rs
substruct/src/: main.rs
