[package]
name = "substruct_derive"
# When releasing a new version, please update html_root_url in src/lib.rs
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0.3", features = ["extra-traits"] }
quote = "1.0.33"
proc-macro2 = "1.0.67"
proc-macro-error = "1.0.4"

[lib]
name = "substruct_derive"
proc-macro = true
